--- a/style.css
+++ b/style.css
@@ -34,3 +34,10 @@ button {
     flex: 1;
     padding: 5px 25px 5px 25px;
 }
+
+#gameResult {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: xx-large;
+}
